--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -9,10 +9,10 @@ ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -358 1120 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 MoveWindow IDM_MONITOR_WINDOW -1383 1368 975 482
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -1674 2101 942 567
+MoveWindow IDM_SIG_DESIGNER -1597 1280 950 694
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
