--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -70,7 +70,7 @@
     <ClInclude Include="AddNobsCommand.h" />
     <ClInclude Include="AddPipe2BaseKnotCmd.h" />
     <ClInclude Include="AddPipe2PipeCommand.h" />
-    <ClInclude Include="AddSignalCommand.h" />
+    <ClInclude Include="AddSensorSignalCmd.h" />
     <ClInclude Include="AnalyzeCommand.h" />
     <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="AttachSIgGen2ConnCmd.h" />
@@ -102,7 +102,6 @@
     <ClInclude Include="SetActiveSigGenCmd.h" />
     <ClInclude Include="AttachSigGen2LineCmd.h" />
     <ClInclude Include="SetSigGenStaticDataCmd.h" />
-    <ClInclude Include="SetHighlightedSignalCmd.h" />
     <ClInclude Include="SigGenCommand.h" />
     <ClInclude Include="SingleNobAnimation.h" />
     <ClInclude Include="SizeSelectionCmd.h" />
