Multiple stimulus markers in EEG monitor. V3.3 RC

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -13,6 +13,6 @@ ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
-ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -1204 1084 735 429
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -1557 1205 628 432
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
