work on import/export signal data. Running.

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -71,6 +71,7 @@
     <ClInclude Include="AddPipe2BaseKnotCmd.h" />
     <ClInclude Include="AddPipe2PipeCommand.h" />
     <ClInclude Include="AddSensorSignalCmd.h" />
+    <ClInclude Include="AddSigGen2MonitorCmd.h" />
     <ClInclude Include="AnalyzeCommand.h" />
     <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="AttachSIgGen2ConnCmd.h" />
