--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClInclude Include="AttachSigGen2SelCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AddSigGen2MonitorCmd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
