--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -6,10 +6,10 @@ MoveWindow IDM_MINI_WINDOW -302 1086 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1742 1195 1426 843
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -358 1120 301 301
+MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1826 1273 986 564
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MONITOR_WINDOW -1579 1378 986 564
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
