--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -8,11 +8,11 @@ MoveWindow IDM_MAIN_WINDOW -1742 1195 1426 843
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1617 1436 986 428
+MoveWindow IDM_MONITOR_WINDOW -1845 1530 1555 428
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -710 1362 628 382
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -1302 1554 811 635
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
