--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="WrapNrOfTracks.h" />
     <ClInclude Include="WrapProtocol.h" />
     <ClInclude Include="WrapSetParam.h" />
+    <ClInclude Include="WrapSetSigGen.h" />
     <ClInclude Include="WrapSignal.h" />
     <ClInclude Include="WrapSignalData.h" />
     <ClInclude Include="WrapSignalGenerator.h" />
