--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1750 1143 1442 925
+MoveWindow IDM_APPL_WINDOW -1865 1172 1442 925
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -303 1385 301 226
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -302 1086 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1742 1195 1426 843
+MoveWindow IDM_MAIN_WINDOW -1857 1224 1426 843
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1719 1492 1555 476
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -1679 1874 758 290
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -786 1341 811 635
+MoveWindow IDM_SIG_DESIGNER -860 1280 811 635
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
