--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -192,6 +192,11 @@
     <ClCompile Include="symtab.cpp" />
     <ClCompile Include="WrapInclude.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.vcxproj">
+      <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
