--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -46,7 +46,6 @@
     <ClInclude Include="SlowMotionRatio.h" />
     <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="SmoothMoveFp.h" />
-    <ClInclude Include="SoundInterface.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TextBuffer.h" />
@@ -65,6 +64,7 @@
     <ClCompile Include="Observable.ixx" />
     <ClCompile Include="ObserverInterface.ixx" />
     <ClCompile Include="SmoothMove.cpp" />
+    <ClCompile Include="SoundInterface.ixx" />
     <ClCompile Include="TextBuffer.cpp" />
     <ClCompile Include="trace.cpp" />
     <ClCompile Include="util.cpp" />
