--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClInclude Include="LineType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SoundInterface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CircleType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -153,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DisplayFunctor.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundInterface.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
