--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -167,22 +167,22 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ERRHNDL.H" />
+    <ClInclude Include="ErrHndl.h" />
     <ClInclude Include="Input.h" />
-    <ClInclude Include="SCANNER.H" />
-    <ClInclude Include="SCRIPT.H" />
+    <ClInclude Include="Scanner.h" />
+    <ClInclude Include="Script.h" />
     <ClInclude Include="ScriptFunctor.h" />
     <ClInclude Include="ScriptStack.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="SYMTAB.H" />
+    <ClInclude Include="Symtab.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WrapBase.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ERRHNDL.cpp" />
-    <ClCompile Include="INPUT.cpp" />
-    <ClCompile Include="SCRIPT.cpp" />
-    <ClCompile Include="SCRSCAN.cpp" />
+    <ClCompile Include="ErrHndl.cpp" />
+    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Script.cpp" />
+    <ClCompile Include="ScrScan.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
