--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -24,14 +24,10 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="EllipseType.h" />
     <ClInclude Include="EnumArray.h" />
-    <ClInclude Include="EventInterface.h" />
-    <ClInclude Include="generationNr.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Int24.h" />
     <ClInclude Include="IoConstants.h" />
     <ClInclude Include="LineType.h" />
-    <ClInclude Include="ListOfNamedObjects.h" />
-    <ClInclude Include="LogarithmicTrackbar.h" />
     <ClInclude Include="MeanFilter.h" />
     <ClInclude Include="MoreTypes.h" />
     <ClInclude Include="NamedType.h" />
@@ -54,12 +50,11 @@
     <ClCompile Include="BasicTypes.cpp" />
     <ClCompile Include="BoolOp.ixx" />
     <ClCompile Include="DisplayFunctor.ixx" />
+    <ClCompile Include="EventInterface.ixx" />
     <ClCompile Include="MeanFilter.cpp" />
     <ClCompile Include="MoreTypes.cpp" />
     <ClCompile Include="Observable.ixx" />
     <ClCompile Include="ObserverInterface.ixx" />
-    <ClCompile Include="SmoothMove.cpp" />
-    <ClCompile Include="SmoothMove.ixx" />
     <ClCompile Include="SmoothMoveFp.ixx" />
     <ClCompile Include="SoundInterface.ixx" />
     <ClCompile Include="TextBuffer.cpp" />
