--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -15,19 +15,10 @@
     <ClInclude Include="EnumArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EventInterface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="generationNr.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Geometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Int24.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="LogarithmicTrackbar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MoreTypes.h">
@@ -93,17 +84,11 @@
     <ClInclude Include="MeanFilter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ListOfNamedObjects.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="NamedType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SmoothMove.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="TextBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -140,10 +125,10 @@
     <ClCompile Include="SoundInterface.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SmoothMove.ixx">
+    <ClCompile Include="SmoothMoveFp.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SmoothMoveFp.ixx">
+    <ClCompile Include="EventInterface.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
