--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="NamedType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SaveCast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextBuffer.cpp">
