--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClInclude Include="MeanFilter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NamedType.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SaveCast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -126,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ViewCollection.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NamedType.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
