--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -12,12 +12,6 @@
     <ClInclude Include="debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EnumArray.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Geometry.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MoreTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -33,16 +27,7 @@
     <ClInclude Include="RectType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RingBuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="TextBuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="UtilityWrappers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="XArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LineType.h">
@@ -126,6 +111,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NamedType.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextBuffer.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Geometry.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
